# openfs

./: .gitignore  LICENCE  README.md  build.py  pyproject.toml  requirements.txt  setup.py
featurestore/: __init__.py
featurestore/boosters/: __init__.py  boosters.py
featurestore/client/: client.py
featurestore/stores/: stores.py
openfs/: __init__.py
openfs/boosters/: boosters.py
openfs/client/: client.py
openfs/gui/: gui.py
openfs/stores/: __init__.py  stores.py
